finished the login

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose",
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,15 @@
   "homepage": "https://github.com/bw-chef-portfolio/chef-portfolio-BE#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cleaner": "^2.0.0-alpha",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.0",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.17.5",
+    "knex": "^0.17.0-next3",
+    "morgan": "^1.9.1",
     "sqlite3": "^4.0.8"
   },
   "devDependencies": {
