--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.0-next3",
+    "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "sqlite3": "^4.0.8"
